<resources>
    <string name="app_name">AgroTech</string>
    <string name="welcome_title">IMPULSIONE A LAVOURA E PRODUÇÃO</string>
    <string name="welcome_description">O aplicativo moderno para gerenciar sua terra, monitorar safras e otimizar processos agrícolas com facilidade pura no campo.</string>
    <string name="welcome_start">Começar</string>
    <string name="welcome_login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>